--- a/pom.xml
+++ b/pom.xml
@@ -203,10 +203,16 @@
       <systemPath>${project.basedir}/lib/commons-cli-1.4.jar</systemPath>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
     </dependency>
     <!-- <dependency>
     	<groupId>ch.uzh.ifi.seal</groupId>
