--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <junit.version>5.6.0</junit.version>
     <java.version>11</java.version>
   </properties>
-
+ 
   <developers>
     <developer>
       <name>Quentin Le Dilavrec</name>
@@ -140,7 +140,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.16</version>
+          <version>3.0.0-M4</version>
           <configuration>
             <!-- the following is required to have the same execution semantics as eclipse (hence all tests passing) -->
             <!-- the reason is that it switches Spoon in noclasspath or not for this particular file -->
@@ -183,7 +183,7 @@
     <dependency>
       <groupId>fr.inria.gforge.spoon</groupId>
       <artifactId>spoon-core</artifactId>
-      <version>8.1.0-beta-17</version>
+      <version>8.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.github.gumtreediff</groupId>
