New architecture - send mined data to neo4j database - memoize result of different mining stages - SoftReference memoized data

--- a/pom.xml
+++ b/pom.xml
@@ -254,5 +254,10 @@
       <artifactId>impact-miner</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-  </dependencies>
+    <dependency>
+      <groupId>org.neo4j.driver</groupId>
+      <artifactId>neo4j-java-driver</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    </dependencies>
 </project>
