--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,16 +1,1 @@
-log4j.rootLogger=info, stdout
-log4j.logger.fr.quentin.coevolutionMiner=debug, R
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %p %c - %m%n
-
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=/tmp/coevoLog
-
-log4j.appender.R.MaxFileSize=1000KB
-log4j.appender.R.MaxBackupIndex=3
-
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %p %c - %m%n
+log4j.rootLogger=debug, stdout
