use hash to index nodes in db

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-resources=/home/quentin/resources
+resources=C:\\Users\\quentin\\resources
 neo4jAddress=bolt://localhost:7687
 neo4jId=neo4j
 neo4jPwd=password
-mavenHome=/usr
+mavenHome=C:\\Program Files\\apache-maven
