--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-resources=C:\\Users\\quentin\\resources
+resources=/home/quentin/resources
 neo4jAddress=bolt://localhost:7687
 neo4jId=neo4j
 neo4jPwd=password
-mavenHome=C:\\Program Files\\apache-maven
+mavenHome=/usr
